# ==============================================================================
# QCustomPlot CMake File
# ==============================================================================

INCLUDE_DIRECTORIES(qcustomplot SYSTEM)

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(qcustomplot)

